Change in Version 2.6.0
- added new argument in function 'bgvar', within the 'expert' settings of 'OE.weights': OE.exo
- this new argument manipulates the 'getweights' function to allow other entities exogenous variables to influence other entities as well

Change in Version 2.5.9
- updated documentation regarding 'prmean'
- fixed bug in .getweights
- fixed bug in irfs
- fixed bug regarding weakly exogenous variables

Change in Version 2.5.8
- update mail adress of maintainer
- fix for hyperparameters of Minnesota prior

Change in Version 2.5.6
- some minor bug fixes (numerical issues when estimating single-VARs)

Change in Version 2.5.5
- fix error on CRAN 

Change in Version 2.5.3
- small change in estimation procedure: countries can now have asymmetric effects, i.e., they are important for other countries
- but do have own spillovers (no weakly exogenous variables for particular countries)
- add JSS paper to vignette
- update maintainer information (mail address)
- change 'itemize' to 'describe' in markdown help files.
- irf command returns plotted data in list format.
- fixed a bug in .getweights().

Change in Version 2.5.2
- add JSS publication

Change in Version 2.5.1
- changes plot styles

Change in Version 2.5.0
- bugfix in pesaranData (rowSums did not sum up to one)
- final version for JSS publication

Change in Version 2.4.6
- improved memory usage and garbage collection in irf function

Change in Version 2.4.4/5
- Implementation of the corrigendum of Carriero, Chan, Clark, and Marcellino (2021, Journal of Econometrics)
- added the horseshoe prior (Makalic and Schmidt, 2015, IEEE Signal Processing Letters)
- better memory usage
- new features:
  - plag can now be differently specified for endogenous and weakly exogenous variables
- bugfix in Ex argument in `bgvar`
- bugfix in summary command
- bugfix with Wex.restr
- bugfix in monthlyData
- bugfix in GFEVD
- bugfix in summary

Change in Version 2.4.2/3
- bugfix in fevd; added additional check
